// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--secondary"
  >
    Text
  </button>,
]
`;

exports[`Button Renders primary 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--primary"
  >
    Text
  </button>,
]
`;

exports[`Button Renders secondary 1`] = `
[
  <button
    class="sc-bdfCDU gPECCf lagom-button lagom-button--secondary"
  >
    Text
  </button>,
]
`;
